--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - uses: awalsh128/cache-apt-pkgs-action@v1.2.4
+        packages: libudev-dev
+
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
