--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,8 @@ jobs:
       - uses: actions/checkout@v3
 
       - uses: awalsh128/cache-apt-pkgs-action@v1.2.4
-        packages: libudev-dev
+        with:
+          packages: libudev-dev
 
       - uses: actions-rs/toolchain@v1
         with:
