--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,9 +11,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: awalsh128/cache-apt-pkgs-action@v1.2.4
-        with:
-          packages: libudev-dev
+      - name: Install libudev
+        run: sudo apt-get install -y libudev-dev
 
       - uses: actions-rs/toolchain@v1
         with:
