--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,9 +11,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install libudev
-        run: sudo apt-get install -y libudev-dev
-
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
@@ -23,6 +20,7 @@ jobs:
 
       - uses: actions-rs/cargo@v1
         with:
+          use-cross: true
           command: build
           args: --release --target armv7-unknown-linux-gnueabihf
 
