--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - id: ls
+        run: ls -al
       - uses: SebRollen/toml-action@v1.0.1
         id: read_toml
         with:
@@ -20,7 +22,6 @@ jobs:
           field: 'package.version'
 
       - uses: ncipollo/release-action@v1
-        if: github.ref == 'refs/heads/main'
         with:
           artifacts: target/release/odyssey
           tag: v${{ steps.read_toml.outputs.value }}_fake
