--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,21 +25,33 @@ jobs:
           command: build
           args: --release --target armv7-unknown-linux-gnueabihf
 
-      - uses: actions/upload-artifact@v3
-        with:
-          name: odyssey
-          path: target/armv7-unknown-linux-gnueabihf/release/odyssey
-
       - uses: SebRollen/toml-action@v1.0.1
         id: read_toml
         with:
           file: 'Cargo.toml'
           field: 'package.version'
 
+      - name: Copy & Compress output
+        id: compress
+        run: |
+          NOW=$(date +"%Y-%m-%d-%H%M")
+          ARCHIVE=$NOW-odyssey-${{ steps.read_toml.outputs.value }}
+          cp target/armv7-unknown-linux-gnueabihf/release/odyssey odyssey
+          cp target/armv7-unknown-linux-gnueabihf/release/odyssey.yaml odyssey.yaml
+          tar -czvf $ARCHIVE.tar.gz  odyssey odyssey.yaml
+          echo "archive=$ARCHIVE" >> $GITHUB_OUTPUT
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: odyssey
+          path: |
+            odyssey
+            odyssey.yaml
+
       - uses: ncipollo/release-action@v1
         if: github.ref == 'refs/heads/main'
         with:
-          artifacts: target/release/odyssey
+          artifacts: ${{ steps.compress.outputs.archive }}.tar.gz
           tag: v${{ steps.read_toml.outputs.value }}
           skipIfReleaseExists: true
           generateReleaseNotes: true
