--- a/odyssey.yaml
+++ b/odyssey.yaml
@@ -1,3 +1,26 @@
+# This is the default Odyssey configuration file for the Prometheus MSLA. It is
+# meant to be paired with the latest Prometheus MSLA klipper config.
+
+# This section holds the config fields related to the printer, such as its serial
+# connection and its frame buffer specs
 printer:
   serial: /home/pi/printer_data/comms/klippy.serial
+  baudrate: 250000
   frame_buffer: /dev/fb0
+  fb_bit_depth: 5
+  fb_chunk_size: 16
+  max_z: 350
+  z_lift: 10
+
+# This section holds fields pertaining to the Gcode used to drive the machine's
+# hardware, and signal between the board and Odyssey
+gcode:
+  boot: G90
+  shutdown: M84
+  home_command: G28
+  move_command: G0 Z{z} F300
+  print_start: G28
+  print_end: G0 Z{max_z}
+  cure_start: SET_PIN PIN=led_array VALUE=650
+  cure_end: SET_PIN PIN=led_array VALUE=0
+  sync_message: Z_move_comp
