add led shutdown to shutdown gcode

--- a/odyssey.yaml
+++ b/odyssey.yaml
@@ -16,7 +16,9 @@ printer:
 # hardware, and signal between the board and Odyssey
 gcode:
   boot: G90
-  shutdown: M84
+  shutdown: |
+    M84
+    SET_PIN PIN=led_array VALUE=0
   home_command: G28
   move_command: G0 Z{z} F300
   print_start: SET_FAN_SPEED FAN=filter_fans SPEED=1
