Fill out README and implement missing gcode fields (#4)
* Fill out README and implement missing gcode fields

Fill out README with information about the project and the config
Adjust gcode.rs and printer.rs to implement and use the home, boot,
and shutdown config fields.
Modify default config to make better use of certain fields
Modify main to run printer boot and shutdown code before and after
print

* add led shutdown to shutdown gcode

* Fix default config and add usage README section

--- a/odyssey.yaml
+++ b/odyssey.yaml
@@ -16,11 +16,15 @@ printer:
 # hardware, and signal between the board and Odyssey
 gcode:
   boot: G90
-  shutdown: M84
+  shutdown: |
+    M84
+    SET_PIN PIN=led_array VALUE=0
   home_command: G28
   move_command: G0 Z{z} F300
-  print_start: G28
-  print_end: G0 Z{max_z}
+  print_start: SET_FAN_SPEED FAN=filter_fans SPEED=1
+  print_end: |
+    G0 Z{max_z}
+    SET_FAN_SPEED FAN=filter_fans SPEED=0
   cure_start: SET_PIN PIN=led_array VALUE=650
   cure_end: SET_PIN PIN=led_array VALUE=0
   sync_message: Z_move_comp
