Keep filter fans on at low speed when not printing

--- a/odyssey.yaml
+++ b/odyssey.yaml
@@ -15,7 +15,9 @@ printer:
 # This section holds fields pertaining to the Gcode used to drive the machine's
 # hardware, and signal between the board and Odyssey
 gcode:
-  boot: G90
+  boot: |
+    G90
+    SET_FAN_SPEED FAN=filter_fans SPEED=0.3
   shutdown: |
     M84
     SET_PIN PIN=led_array VALUE=0
@@ -24,7 +26,7 @@ gcode:
   print_start: SET_FAN_SPEED FAN=filter_fans SPEED=1
   print_end: |
     G0 Z{max_z}
-    SET_FAN_SPEED FAN=filter_fans SPEED=0
+    SET_FAN_SPEED FAN=filter_fans SPEED=0.3
   cure_start: SET_PIN PIN=led_array VALUE=650
   cure_end: SET_PIN PIN=led_array VALUE=0
   sync_message: Z_move_comp
