API Initial Commit
Revamp API module to use Poem, and have a few basic endpoints (WIP)
Revamp printer module to use an event loop, and async channels for
both receiving operation requests and sending status updates
Refactor CLI mode to make use of the print event loop

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ futures = "0.3.26"
 async-trait = "0.1.64"
 regex = "1"
 serialport = { version = "4.2.0", default-features = false }
+poem = { version = "1.3.55", features = ["websocket", "multipart"]}
