--- a/odyssey.yaml
+++ b/odyssey.yaml
@@ -30,3 +30,9 @@ gcode:
   cure_start: SET_PIN PIN=led_array VALUE=650
   cure_end: SET_PIN PIN=led_array VALUE=0
   sync_message: Z_move_comp
+
+# This section holds fields pertaining to the Odyseey API, such as the port number
+# and where to store uploaded .sl1 files
+api:
+  upload_path: /home/pi/printer_data/gcodes
+  port: 12357
