--- a/odyssey.yaml
+++ b/odyssey.yaml
@@ -4,9 +4,10 @@
 # This section holds the config fields related to the printer, such as its serial
 # connection and its frame buffer specs
 printer:
-  serial: /home/pi/printer_data/comms/klippy.serial
+  #serial: /home/pi/printer_data/comms/klippy.serial
+  serial: /dev/pts/7
   baudrate: 250000
-  frame_buffer: /dev/fb0
+  frame_buffer: /dev/null
   fb_bit_depth: 5
   fb_chunk_size: 16
   max_z: 350
@@ -34,5 +35,7 @@ gcode:
 # This section holds fields pertaining to the Odyseey API, such as the port number
 # and where to store uploaded .sl1 files
 api:
-  upload_path: /home/pi/printer_data/gcodes
+  upload_path: /home/ragwafire/printer_data/gcodes
+  # glob pattern for finding files in mounted USB devices, if present
+  usb_glob: /media/usb*/*
   port: 12357
