--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,8 @@ jobs:
         run: |
           cp target/armv7-unknown-linux-gnueabihf/release/odyssey odyssey
           cp target/armv7-unknown-linux-gnueabihf/release/odyssey.yaml odyssey.yaml
-          tar -czvf odyssey.tar.gz  odyssey odyssey.yaml
+          cp target/armv7-unknown-linux-gnueabihf/release/apiHelper.py apiHelper.py
+          tar -czvf odyssey.tar.gz  odyssey odyssey.yaml apiHelper.py
           echo "archive=$ARCHIVE" >> $GITHUB_OUTPUT
 
       - uses: actions/upload-artifact@v3
@@ -45,6 +46,7 @@ jobs:
           path: |
             odyssey
             odyssey.yaml
+            apiHelper.py
 
       - uses: ncipollo/release-action@v1
         if: github.ref == 'refs/heads/main'
