Revert "Force temp release"
This reverts commit c330b1ce84d7ce65300f1513c5358a0ff44ce42a.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,6 +47,7 @@ jobs:
             apiHelper.py
 
       - uses: ncipollo/release-action@v1
+        if: github.ref == 'refs/heads/main'
         with:
           artifacts: odyssey.tar.gz
           tag: v${{ steps.read_toml.outputs.value }}
