--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,5 @@ regex = "1"
 serialport = { version = "4.2.0", default-features = false }
 poem = { version = "1.3.55", features = ["websocket", "multipart"]}
 glob = "0.3.1"
+log = "0.4.17"
+simple_logger = "4.1.0"
