Add Status Sync, Fix Gcode variables, adjust default config
Add HardwareController::hardwareReady method and gcode implementation
to ensure that a given hardware controller is ready before we will start
a print (avoid dropped messages)
Add associated config parameters for above
Refactor gcode variable substitution, to make better use of regex
and to ensure certain globally available variables during prints
Modify default move and print start commands to emit print stats for klipper

--- a/odyssey.yaml
+++ b/odyssey.yaml
@@ -24,14 +24,20 @@ gcode:
     M84
     SET_PIN PIN=led_array VALUE=0
   home_command: G28
-  move_command: G0 Z{z} F300
-  print_start: SET_FAN_SPEED FAN=filter_fans SPEED=1
+  move_command: |
+    G0 Z{z} F300
+    SET_PRINT_STATS_INFO CURRENT_LAYER={layer}
+  print_start: |
+    SET_FAN_SPEED FAN=filter_fans SPEED=1
+    SET_PRINT_STATS_INFO TOTAL_LAYER={total_layers}
   print_end: |
     G0 Z{max_z}
     SET_FAN_SPEED FAN=filter_fans SPEED=0.3
   cure_start: SET_PIN PIN=led_array VALUE=650
   cure_end: SET_PIN PIN=led_array VALUE=0
   sync_message: Z_move_comp
+  status_check: status
+  status_desired: "Klipper state: Ready"
 
 # This section holds fields pertaining to the Odyseey API, such as the port number
 # and where to store uploaded .sl1 files
