--- a/odyssey.yaml
+++ b/odyssey.yaml
@@ -5,14 +5,18 @@
 # connection and its frame buffer specs
 printer:
   serial: /home/pi/printer_data/comms/klippy.serial
-  #serial: /dev/pts/7 # Mock port opened with `python3 test/mockSerial.py`
+  #serial: /dev/pts/14 # Mock port opened with `python3 test/mockSerial.py`
   baudrate: 250000
   frame_buffer: /dev/fb0
   #frame_buffer: /dev/null # Dump frames to null for testing
   fb_bit_depth: 5
   fb_chunk_size: 16
   max_z: 350
-  z_lift: 10
+  default_lift: 10
+  default_up_speed: 3.4
+  default_down_speed: 3.4
+  default_wait_before_layer: 2.2
+  default_wait_after_layer: 1.5
 
 # This section holds fields pertaining to the Gcode used to drive the machine's
 # hardware, and signal between the board and Odyssey
@@ -24,7 +28,7 @@ gcode:
     M84
     SET_PIN PIN=led_array VALUE=0
   home_command: G28
-  move_command: G0 Z{z} F300
+  move_command: G0 Z{z} F{speed}
   print_start: |
     G28
     SET_FAN_SPEED FAN=filter_fans SPEED=1
