--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "odyssey"
-version = "0.1.1"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -20,3 +20,7 @@ futures = "0.3.26"
 async-trait = "0.1.64"
 regex = "1"
 serialport = { version = "4.2.0", default-features = false }
+poem = { version = "1.3.55", features = ["websocket", "multipart"]}
+glob = "0.3.1"
+log = "0.4.17"
+simple_logger = "4.1.0"
