--- a/odyssey.yaml
+++ b/odyssey.yaml
@@ -5,12 +5,18 @@
 # connection and its frame buffer specs
 printer:
   serial: /home/pi/printer_data/comms/klippy.serial
+  #serial: /dev/pts/6 # Mock port opened with `python3 test/mockSerial.py`
   baudrate: 250000
   frame_buffer: /dev/fb0
+  #frame_buffer: /dev/null # Dump frames to null for testing
   fb_bit_depth: 5
   fb_chunk_size: 16
   max_z: 350
-  z_lift: 10
+  default_lift: 10
+  default_up_speed: 3.4
+  default_down_speed: 3.4
+  default_wait_before_exposure: 2.2
+  default_wait_after_exposure: 1.5
 
 # This section holds fields pertaining to the Gcode used to drive the machine's
 # hardware, and signal between the board and Odyssey
@@ -22,11 +28,26 @@ gcode:
     M84
     SET_PIN PIN=led_array VALUE=0
   home_command: G28
-  move_command: G0 Z{z} F300
-  print_start: SET_FAN_SPEED FAN=filter_fans SPEED=1
+  move_command: G0 Z{z} F{speed}
+  print_start: |
+    G28
+    SET_FAN_SPEED FAN=filter_fans SPEED=1
+    SET_PRINT_STATS_INFO TOTAL_LAYER={total_layers}
   print_end: |
     G0 Z{max_z}
     SET_FAN_SPEED FAN=filter_fans SPEED=0.3
+  layer_start: SET_PRINT_STATS_INFO CURRENT_LAYER={layer}
   cure_start: SET_PIN PIN=led_array VALUE=650
   cure_end: SET_PIN PIN=led_array VALUE=0
-  sync_message: Z_move_comp
+  move_sync: Z_move_comp
+  move_timeout: 60
+  status_check: status
+  status_desired: "Klipper state: Ready"
+
+# This section holds fields pertaining to the Odyseey API, such as the port number
+# and where to store uploaded .sl1 files
+api:
+  upload_path: /home/pi/printer_data/gcodes
+  # glob pattern for finding files in mounted USB devices, if present
+  usb_glob: /media/usb*/*.sl1
+  port: 12357
