--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,9 +34,9 @@ jobs:
         id: compress
         run: |
           cp target/armv7-unknown-linux-gnueabihf/release/odyssey odyssey
-          cp target/armv7-unknown-linux-gnueabihf/release/odyssey.yaml odyssey.yaml
+          cp target/armv7-unknown-linux-gnueabihf/release/default.yaml default.yaml
           cp target/armv7-unknown-linux-gnueabihf/release/apiHelper.py apiHelper.py
-          tar -czvf odyssey.tar.gz odyssey odyssey.yaml apiHelper.py
+          tar -czvf odyssey.tar.gz odyssey default.yaml apiHelper.py
           echo "archive=$ARCHIVE" >> $GITHUB_OUTPUT
 
       - uses: actions/upload-artifact@v4.3.1
@@ -44,7 +44,7 @@ jobs:
           name: odyssey
           path: |
             odyssey
-            odyssey.yaml
+            default.yaml
             apiHelper.py
 
       - uses: ncipollo/release-action@v1.14.0
