--- a/test/test.yaml
+++ b/test/test.yaml
@@ -4,7 +4,7 @@
 # This section holds the config fields related to the printer, such as its serial
 # connection and its frame buffer specs
 printer:
-  serial: /dev/pts/6 # Mock port opened with `python3 test/mockSerial.py`
+  serial: /dev/pts/7 # Mock port opened with `python3 test/mockSerial.py`
   baudrate: 250000
   frame_buffer: /dev/null # Dump frames to null for testing
   fb_bit_depth: 5
@@ -42,7 +42,7 @@ gcode:
 # This section holds fields pertaining to the Odyseey API, such as the port number
 # and where to store uploaded .sl1 files
 api:
-  upload_path: /home/pi/printer_data/gcodes
+  upload_path: ./uploads
   # glob pattern for finding files in mounted USB devices, if present
   usb_glob: /media/usb*/*.sl1
   port: 12357
