--- a/test/test.yaml
+++ b/test/test.yaml
@@ -42,7 +42,7 @@ gcode:
 # This section holds fields pertaining to the Odyseey API, such as the port number
 # and where to store uploaded .sl1 files
 api:
-  upload_path: /home/pi/printer_data/gcodes
+  upload_path: ./uploads
   # glob pattern for finding files in mounted USB devices, if present
   usb_glob: /media/usb*/*.sl1
   port: 12357
