--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.1.6", features = ["derive"] }
-#rocket = "0.5.0-rc.2"
+cross = "0.2.5"
 config = "0.13.1"
 serde = "1.0"
 serde_yaml = "0.9"
