github_actions: remove duplicate linting, fix warning elevation
Remove duplicate linting from build action
Remove default rustflags from toolchain action, preventing warning
escalation

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,15 +13,11 @@ jobs:
 
       - name: Install Rust Toolchain
         uses: actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          rustflags: ""
 
       - name: Install Cross
         run: cargo install cross --git https://github.com/cross-rs/cross
-
-      - name: Clippy Linting
-        run: cargo clippy --all-features
-
-      - name: Rustfmt Check
-        uses: actions-rust-lang/rustfmt@v1
 
       - name: Compile armv7
         run: cross build --release --target armv7-unknown-linux-gnueabihf
