github_actions: add sudo to apt call

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
           field: 'package.version'
 
       - name: install dependencies
-        run: apt install -y gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf g++-aarch64-linux-gnu gcc-aarch64-linux-gnu gcc g++
+        run: sudo apt install -y gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf g++-aarch64-linux-gnu gcc-aarch64-linux-gnu gcc g++
 
       - name: Update Rust Toolchain
         uses: actions-rust-lang/setup-rust-toolchain@v1
