--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,16 +23,17 @@ jobs:
       - name: Update Rust Toolchain
         uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          rustflags: "-Awarning"
+          rustflags: "-Awarnings"
 
       - name: Compile, Copy, and Compress armv7
         run: |
+          BUILD_NAME=odyssey_armv7
           cargo build --release --target armv7-unknown-linux-gnueabihf
-          mkdir odyssey_armv7
-          mv target/armv7-unknown-linux-gnueabihf/release/odyssey odyssey_armv7
-          cp default.yaml odyssey_armv7
-          cp apiHelper.py odyssey_armv7
-          tar -czvf odyssey_armv7.tar.gz odyssey_armv7
+          mkdir $BUILD_NAME
+          mv target/armv7-unknown-linux-gnueabihf/release/odyssey $BUILD_NAME
+          cp default.yaml $BUILD_NAME
+          cp apiHelper.py $BUILD_NAME
+          tar -czvf $BUILD_NAME.tar.gz -C $BUILD_NAME odyssey apiHelper.py default.yaml
       
       - name: upload armv7 artifact
         uses: actions/upload-artifact@v4.3.1
@@ -42,12 +43,13 @@ jobs:
           
       - name: Compile, Copy, and Compress aarch64
         run: |
+          BUILD_NAME=odyssey_aarch64
           cargo build --release --target aarch64-unknown-linux-gnu
-          mkdir odyssey_aarch64
-          mv target/aarch64-unknown-linux-gnu/release/odyssey odyssey_aarch64
-          cp default.yaml odyssey_aarch64
-          cp apiHelper.py odyssey_aarch64
-          tar -czvf odyssey_aarch64.tar.gz odyssey_aarch64
+          mkdir $BUILD_NAME
+          mv target/aarch64-unknown-linux-gnu/release/odyssey $BUILD_NAME
+          cp default.yaml $BUILD_NAME
+          cp apiHelper.py $BUILD_NAME
+          tar -czvf $BUILD_NAME.tar.gz -C $BUILD_NAME odyssey apiHelper.py default.yaml
       
       - name: upload aarch64 artifact
         uses: actions/upload-artifact@v4.3.1
@@ -57,12 +59,13 @@ jobs:
           
       - name: Compile, Copy, and Compress x86_64
         run: |
+          BUILD_NAME=odyssey_x86_64
           cargo build --release --target x86_64-unknown-linux-gnu
-          mkdir odyssey_x86_64
-          mv target/x86_64-unknown-linux-gnu/release/odyssey odyssey_x86_64
-          cp default.yaml odyssey_x86_64
-          cp apiHelper.py odyssey_x86_64
-          tar -czvf odyssey_x86_64.tar.gz odyssey_x86_64
+          mkdir $BUILD_NAME
+          mv target/x86_64-unknown-linux-gnu/release/odyssey $BUILD_NAME
+          cp default.yaml $BUILD_NAME
+          cp apiHelper.py $BUILD_NAME
+          tar -czvf $BUILD_NAME.tar.gz -C $BUILD_NAME odyssey apiHelper.py default.yaml
       
       - name: upload x86_64 artifact
         uses: actions/upload-artifact@v4.3.1
