github_actions: swap pre-push check with pre-merge-commit
Swap pre-push cargo fmt for pre-merge-commit to avoid slowing down
development quite so much

--- a/.github/workflows/pre-merge-commit.yml
+++ b/.github/workflows/pre-merge-commit.yml
@@ -1,4 +1,4 @@
-name: Pre-Push Format Check
+name: pre-merge-commit Format Check
 
 
 on:
@@ -7,7 +7,7 @@ on:
     workflow_dispatch:
 
 jobs:
-    pre-push:
+    pre-merge-commit:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
