manual_control: allow moves during pause, add default pause lift
Add pause lift config entry
Lift by corresponding distance (or to max) on pause
Allow manual moves while paused, with a min of last printed layer
height to prevent crashes

--- a/default.yaml
+++ b/default.yaml
@@ -15,6 +15,7 @@ printer:
   default_down_speed: 3.4
   default_wait_before_exposure: 2.2
   default_wait_after_exposure: 1.5
+  pause_lift: 100
 
 # This section holds fields pertaining to the Gcode used to drive the machine's
 # hardware, and signal between the board and Odyssey
