--- a/test/test.yaml
+++ b/test/test.yaml
@@ -4,11 +4,13 @@
 # This section holds the config fields related to the printer, such as its serial
 # connection and its frame buffer specs
 printer:
-  serial: /dev/pts/12 # Mock port opened with `python3 test/mockSerial.py`
+  serial: /dev/pts/7 # Mock port opened with `python3 test/mockSerial.py`
   baudrate: 250000
   frame_buffer: /dev/null # Dump frames to null for testing
-  fb_bit_depth: 5
-  fb_chunk_size: 16
+  fb_bit_depth:
+    - 5
+    - 6
+    - 5
   max_z: 350
   default_lift: 10
   default_up_speed: 3.4
