--- a/test/test.yaml
+++ b/test/test.yaml
@@ -16,7 +16,8 @@ printer:
 
 # This section holds fields pertaining to the display used by the printer
 display:
-  frame_buffer: /tmp/emulatedFramebuffer # Dump frames to null for testing
+  #frame_buffer: /tmp/emulatedFramebuffer # Use with fbEmulator.py
+  frame_buffer: /dev/null # Dump frames to null for testing
   bit_depth:
     - 5
     - 6
