--- a/default.yaml
+++ b/default.yaml
@@ -6,16 +6,23 @@
 printer:
   serial: /home/pi/printer_data/comms/klippy.serial
   baudrate: 250000
-  frame_buffer: /dev/fb0
-  fb_bit_depth: 5
-  fb_chunk_size: 16
-  max_z: 350
+  max_z: 300
   default_lift: 10
   default_up_speed: 3.4
   default_down_speed: 3.4
   default_wait_before_exposure: 2.2
   default_wait_after_exposure: 1.5
   pause_lift: 100
+
+# This section holds fields pertaining to the display used by the printer
+display:
+  frame_buffer: /dev/fb0
+  bit_depth:
+    - 5
+    - 6
+    - 5
+  screen_width: 6480
+  screen_height: 3600
 
 # This section holds fields pertaining to the Gcode used to drive the machine's
 # hardware, and signal between the board and Odyssey
