--- a/test/test.yaml
+++ b/test/test.yaml
@@ -1,14 +1,11 @@
-# This is the default Odyssey configuration file for the Prometheus MSLA. It is
-# meant to be paired with the latest Prometheus MSLA klipper config.
+# This is the Odyssey configuration file for local testing only. It is not intended
+# for real hardware, and does not carry particularly realistic values.
 
 # This section holds the config fields related to the printer, such as its serial
 # connection and its frame buffer specs
 printer:
-  serial: /dev/pts/12 # Mock port opened with `python3 test/mockSerial.py`
+  serial: /dev/pts/10 # Mock port opened with `python3 test/mockSerial.py`
   baudrate: 250000
-  frame_buffer: /dev/null # Dump frames to null for testing
-  fb_bit_depth: 5
-  fb_chunk_size: 16
   max_z: 350
   default_lift: 10
   default_up_speed: 3.4
@@ -16,6 +13,17 @@ printer:
   default_wait_before_exposure: 2.2
   default_wait_after_exposure: 1.5
   pause_lift: 100
+
+# This section holds fields pertaining to the display used by the printer
+display:
+  #frame_buffer: /tmp/emulatedFramebuffer # Use with fbEmulator.py
+  frame_buffer: /dev/null # Dump frames to null for testing
+  bit_depth:
+    - 5
+    - 6
+    - 5
+  screen_width: 192
+  screen_height: 108
 
 # This section holds fields pertaining to the Gcode used to drive the machine's
 # hardware, and signal between the board and Odyssey
