--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,7 @@ poem-openapi = { version = "5.0.0", features = ["swagger-ui"] }
 glob = "0.3.1"
 log = "0.4.17"
 simple_logger = "4.1.0"
+
+[dev-dependencies]
+tempfile = "3.13.0"
+nix = { version = "0.29.0", features = ['fs'] }
