--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
           mkdir $BUILD_NAME
           mv target/armv7-unknown-linux-gnueabihf/release/odyssey $BUILD_NAME
           cp resources/default.yaml $BUILD_NAME
-          tar -czvf $BUILD_NAME.tar.gz -C $BUILD_NAME odyssey apiHelper.py default.yaml
+          tar -czvf $BUILD_NAME.tar.gz -C $BUILD_NAME odyssey default.yaml
       
       - name: upload armv7 artifact
         uses: actions/upload-artifact@v4.3.1
@@ -47,7 +47,7 @@ jobs:
           mkdir $BUILD_NAME
           mv target/aarch64-unknown-linux-gnu/release/odyssey $BUILD_NAME
           cp resources/default.yaml $BUILD_NAME
-          tar -czvf $BUILD_NAME.tar.gz -C $BUILD_NAME odyssey apiHelper.py default.yaml
+          tar -czvf $BUILD_NAME.tar.gz -C $BUILD_NAME odyssey default.yaml
       
       - name: upload aarch64 artifact
         uses: actions/upload-artifact@v4.3.1
@@ -62,7 +62,7 @@ jobs:
           mkdir $BUILD_NAME
           mv target/x86_64-unknown-linux-gnu/release/odyssey $BUILD_NAME
           cp resources/default.yaml $BUILD_NAME
-          tar -czvf $BUILD_NAME.tar.gz -C $BUILD_NAME odyssey apiHelper.py default.yaml
+          tar -czvf $BUILD_NAME.tar.gz -C $BUILD_NAME odyssey default.yaml
       
       - name: upload x86_64 artifact
         uses: actions/upload-artifact@v4.3.1
