--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ itertools = "0.12.1"
 png = "0.17.7"
 framebuffer = "0.3.1"
 tokio = { version = "1", features = ["full"] }
+tokio-util = "0.7.13"
 tokio-serial = "5.4.4"
 futures = "0.3.26"
 async-trait = "0.1.64"
